--- a/Secunda.vcxproj
+++ b/Secunda.vcxproj
@@ -406,6 +406,10 @@
   <ItemGroup>
     <ResourceCompile Include="src\Secunda.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+    <None Include="sigfile\SKYRIMSE_SIGNATURES.json" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
